sas-core/main/default/objects/Settlement_Currency_Setting__mdt/Settlement_Currency_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Settlement Currency Setting</label>
    <pluralLabel>Settlement Currency Settings</pluralLabel>
</CustomObject>