sas-core/main/default/objects/Settlement_Currency_Setting__mdt/fields/EDIPaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>EDIPaymentMethod__c</fullName>
    <label>EDI Payment Method</label>
    <length>25</length>
    <type>Text</type>
</CustomField>