sas-core/main/default/objects/Settlement_Currency_Setting__mdt/fields/EDIRemittanceInstruction__c.field-meta.xml
<CustomField>
    <fullName>EDIRemittanceInstruction__c</fullName>
    <label>EDI Remittance Instruction</label>
    <length>80</length>
    <type>Text</type>
</CustomField>