sas-core/main/default/objects/Settlement_Currency_Setting__mdt/fields/EFTRequester__c.field-meta.xml
<CustomField>
    <fullName>EFTRequester__c</fullName>
    <label>EFT Requester</label>
    <length>15</length>
    <type>Text</type>
</CustomField>