sas-core/main/default/objects/Settlement_Currency_Setting__mdt/fields/Settlement_Bank_Setting__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Bank_Setting__c</fullName>
    <label>Bank For Payments</label>
    <referenceTo>Settlement_Bank_Setting__mdt</referenceTo>
    <relationshipLabel>Settlement Currency Settings</relationshipLabel>
    <relationshipName>Settlement_Currency_Settings</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>