sas-core/main/default/objects/Settlement_Currency_Setting__mdt/listViews/Settlement_Currency_Settings.listView-meta.xml
<ListView>
    <fullName>Settlement_Currency_Settings</fullName>
    <columns>Currency__c</columns>
    <columns>bankEDIIDNumber__c</columns>
    <columns>bankAccountNumber__c</columns>
    <columns>EFTRequester__c</columns>
    <columns>EDIPaymentMethod__c</columns>
    <columns>accountHolderName__c</columns>
    <columns>addressLine1__c</columns>
    <columns>city__c</columns>
    <columns>bankSiteCode__c</columns>
    <columns>country__c</columns>
    <columns>postalCode__c</columns>
    <columns>tradingPartnerCode__c</columns>
    <columns>translatorCode__c</columns>
    <columns>Bank__c</columns>
    <filterScope>Everything</filterScope>
    <label>Settlement Currency Settings</label>
    <language>en_US</language>
</ListView>